updated home and resources and some other methods